# fuzzyband

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CHANGES_PLAN.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  CPP_FUNDAMENTALS.md  CPP_LIBRARIES.md  Doxyfile  ML_REPORT.md  PROTOTYPE_PLAN.md  Phase 1 TODO.md  README.md  REAL_TIME_AUDIO_CLASSIFIER.md  ROADMAP_PHASE_1.md  SIMPLIFY.md  TRIAGE.md
.artifacts/: m001-verification.html
.cursor/: gsd-file-manifest.json
.cursor/agents/: gsd-ai-researcher.md  gsd-debugger.md  gsd-domain-researcher.md  gsd-eval-auditor.md  gsd-eval-planner.md  gsd-executor.md  gsd-framework-selector.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-research-synthesizer.md  gsd-roadmapper.md  gsd-ui-researcher.md  gsd-user-profiler.md  gsd-verifier.md
.github/workflows/: ci.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v0.1.0-REQUIREMENTS.md  v0.1.0-ROADMAP.md  v0.2.0-REQUIREMENTS.md  v0.2.0-ROADMAP.md  v0.3.0-REQUIREMENTS.md  v0.3.0-ROADMAP.md  v0.4.0-REQUIREMENTS.md  v0.4.0-ROADMAP.md  v0.5.0-REQUIREMENTS.md
assets/: accompaniment_model.onnx  bass_model.onnx  classifier.onnx  classifier.onnx.data  metal_groove.onnx  metal_groove.onnx.data  norm_stats.json  structure_model.onnx
build-onnx/: CPackConfig.cmake  CPackSourceConfig.cmake  DartConfiguration.tcl  Makefile  MetalAccompanimentExportPatterns  MetalAccompanimentTests-b12d07c_include.cmake  MetalAccompanimentTests-b12d07c_tests.cmake  MetalAccompaniment_vst3_helper
build-phase10/: CPackConfig.cmake  CPackSourceConfig.cmake  DartConfiguration.tcl  Makefile  MetalAccompanimentExportPatterns  MetalAccompanimentTests-b12d07c_include.cmake  MetalAccompanimentTests-b12d07c_tests.cmake
build-release/: CPackConfig.cmake  CPackSourceConfig.cmake  DartConfiguration.tcl  Makefile  MetalAccompanimentTests-b12d07c_include.cmake  MetalAccompanimentTests-b12d07c_tests.cmake  MetalAccompaniment_vst3_helper
build-relwithdebinfo/: CPackConfig.cmake  CPackSourceConfig.cmake  DartConfiguration.tcl  Makefile  MetalAccompanimentTests-b12d07c_include.cmake
build-tsan/: CPackConfig.cmake  CPackSourceConfig.cmake  DartConfiguration.tcl  Makefile  MetalAccompanimentTests-b12d07c_include.cmake  MetalAccompanimentTests-b12d07c_tests.cmake
data/processed/: class_map.json  meta.csv  meta_groove.csv
docs/: BASS_ONNX_IO.md  CODEBASE_WALKTHROUGH.md  CPP_JUCE_AUDIO_BEST_PRACTICES_AUDIT.md  DATASET_AUDIT.md  DOCS_INDEX.md  FEATURE_CAPTURE.md  MODULARITY_AND_BLOAT_REVIEW.md  ONNX_IO.md  ONNX_READINESS.md  PHASE11_PITCH_TESTING.md  PHASE2_GITHUB_ISSUES.md  PLUGIN_GUIDE.md  PLUGIN_HOSTING.md  RUNTIME_ARCHITECTURE.md  SECTION_TRANSITIONS.md  SLUDGE_METAL_DOMAIN_AUDIT.md  TOKENIZATION.md
infra/: README.md  backend.hcl.example  main.tf  outputs.tf  terraform.tfvars.example  variables.tf
plugin/: README.md
scripts/: bootstrap-tfstate.sh  build_minimal_bass_onnx.py  build_minimal_pattern_onnx.py  build_minimal_structure_onnx.py  check_bass_intervals.py  check_onnx_audio_thread.sh  download-model.sh  export_classifier_onnx.py  generate_test_fixtures.py  install-model-local.sh  install-plugin-to-user.sh  macos-adhoc-sign-plugin-bundle.sh  macos-onnx-symlink-compat.sh  macos-plugin-onnx-embed.entitlements  macos-strip-onnx-build-rpath.sh  promote-model.sh  stage-and-sign-macos-plugins.sh  validate_onnx_contract.py
src/: AccompanimentEditor.cpp  AccompanimentEditor.h  AccompanimentProcessor.cpp  AccompanimentProcessor.h
src/analysis/: AudioRingBuffer.cpp  AudioRingBuffer.h  BeatTracker.cpp  BeatTracker.h  EnergyAnalyser.cpp  EnergyAnalyser.h  FeatureVector.h  MelSpectrogramExtractor.cpp  MelSpectrogramExtractor.h  OnsetDetector.cpp  OnsetDetector.h  PitchEstimator.cpp  PitchEstimator.h  PlaybackGate.cpp  PlaybackGate.h  RiffMirror.cpp  RiffMirror.h  StablePitchTracker.cpp  StablePitchTracker.h  StructureHoldSmoother.cpp  StructureHoldSmoother.h  StructureSequencer.cpp  StructureSequencer.h  StructureTagger.cpp  StructureTagger.h  TempoStabiliser.cpp  TempoStabiliser.h
src/capture/: FeatureCapture.cpp  FeatureCapture.h
src/inference/: IInference.h  IStructureInference.h  MetalGrooveInference.cpp  MetalGrooveInference.h  OnnxBassInference.cpp  OnnxBassInference.h  OnnxInference.cpp  OnnxInference.h  (+12 more)
tests/: PolicyPatternMapperTests.cpp  expected_structure_shadow_pattern_transitions.txt  test_bass_generative.cpp  test_bass_validator_boundaries.cpp  test_beat_tracker.cpp  test_e2e_bpm_tracking.cpp  test_e2e_groove_variety.cpp  test_e2e_silent_section.cpp  test_e2e_structure_transitions.cpp  test_energy_analyser.cpp  test_feature_capture.cpp  test_long_duration_stability.cpp  test_metal_groove_inference.cpp  test_midi_pattern_library.cpp  test_onnx_inference.cpp  test_onnx_latency_benchmark.cpp  test_onset_detector.cpp  test_onset_detector_extended.cpp  test_pattern_player.cpp  test_pattern_player_generative_bass.cpp  test_pattern_rules.cpp  test_performance_benchmark.cpp  test_pitch_estimator.cpp  test_playback_gate.cpp  test_policy_pattern_mapper_full.cpp  test_processor_pipeline.cpp  test_rule_based_inference.cpp  test_stable_pitch_tracker.cpp  test_structure_hold_smoother.cpp  test_structure_hold_smoother_complete.cpp  test_structure_rule_agreement.cpp  test_structure_shadow_integration.cpp  test_structure_tagger.cpp  test_structure_tagger_extended.cpp  test_sub_bass_energy.cpp  test_tempo_stabiliser.cpp
tools/: export_patterns.cpp
training/: EVALUATION.md  FEATURE_PROXY.md  MEL_ALIGNMENT.md  README.md  analyze_feature_proxy_gap.py  build_bass_dataset.py  build_dataset.py  build_lakh_dataset.py  build_structure_dataset.py  download_gmd.py  download_lakh.py  evaluate_feature_capture.py  export_centroids.py  filter_lakh.py  merge_datasets.py  prep_midi.py  requirements.txt  tfds_compat.py  train_bass.py  train_gmd.py  train_groove_model.py  train_pytr_stub.py  train_structure.py
(+293 files in other folders)
